# ia25-2do-examen

./: .gitignore  BUGS_COMUNES.ipynb  CHEATSHEET_EXAMEN.ipynb  CONCEPTOS_CLAVE.md  PRÁCTICA.md  PRÁCTICA_COMPLETA.ipynb  TEORÍA.md  translate_all.py  ÍNDICE.md
.claude/: settings.local.json
Unit 1-2 Fundamentos/: 01_what_is_ai.md  04_generative_and_agentic_ai.md
Unit 3 Paradigmas/: bellman_equation.ipynb  frozen_lake.ipynb  knn.ipynb
plantillas_examen/: 08_cnn.py  (+20 more)
proyects/IES_Teis_AI_Triage/: README.md  main.py  pyproject.toml
proyects/IES_Teis_AI_Triage/automation/: agent.py  faqs.txt
proyects/IES_Teis_AI_Triage/challenge/answer/: implementation.ipynb  rag_2_0.md
proyects/IES_Teis_AI_Triage/docs/: RAG.md  RAG_2_0.md  chromaDB.md  ollama.md
proyects/IES_Teis_AI_Triage/docs/Librerias_Python/: langchain-chroma.md  langchain-huggingface.md  langchain-ollama.md  langchain-text-splitters.md  langchain.md  sentence-transformers.md
proyects/IES_Teis_AI_Triage/docs/web/: arquitectura.html  ia-local.html  popup-chunking.html  popup-embeddings.html  rag.html  rag2.html
proyects/IES_Teis_AI_Triage/how_to_do_it/step#1_Ollama/: Step#1_Ollama.md
proyects/IES_Teis_AI_Triage/how_to_do_it/step#2_RAG/: Step#2_RAG.ipynb
proyects/IES_Teis_AI_Triage/how_to_do_it/step#3_Agent/: Step#3_Agent.ipynb  correos_plus.json
proyects/NO TAN IMPORTANTES/ai-chat-guardrails/: README.md  main.py  pyproject.toml
proyects/NO TAN IMPORTANTES/ai-chat-guardrails/chatbot/backends/: gemini.py
proyects/NO TAN IMPORTANTES/ai-chat-guardrails/prompts/: judge.txt
proyects/NO TAN IMPORTANTES/ai-chat-guardrails/tests/: test_engine.py
proyects/computer-vision/: README.md  chromadb_intro.ipynb  pyproject.toml  vectors_and_embeddings.ipynb
proyects/computer-vision/opencv/: opencv_fundamentals.ipynb  opencv_image_processing.ipynb
proyects/computer-vision/yolo/: object_detection_and_yolo.ipynb
proyects/thyroid/: 01_data_preparation.ipynb  03_baseline_models.ipynb  04_xgboost.ipynb  05_neural_network.ipynb  pyproject.toml
proyects/thyroid/src/: data_loader.py  metrics.py  preprocessing.py  visualization.py
(+160 files in other folders)
